[package]
name = "warp-json-rpc"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "~0.13"
log = "~0.4"
paste = "~0.1"
phf = { version = "~0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "~0.2", features = ["full"] }
warp = "~0.2"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
