[package]
name = "warp-json-rpc"
version = "0.2.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "JSON RPC server extension for warp"
repository = "https://github.com/AtsukiTak/warp-json-rpc"
keywords = ["json-rpc", "rpc", "warp"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
erased-serde = "0.3"
futures = "0.3"
http = "0.2"
hyper = "~0.13"
lazycell = "1.2"
log = "~0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value"] }
warp = "~0.2"

[dev-dependencies]
tokio = { version = "~0.2", features = ["macros"] }
